# textify

./: CMakeLists.txt  Readme.md
src/: CMakeLists.txt  editor.cpp  editor.hpp  global_func.cpp  global_func.hpp  main.cpp
